[hidpi] Ubuntu 16.04: invalid coordinates when using glass robot

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: javafx
    • linux_ubuntu

      Please run the attached test code and click the button. The robot will click again in some incorrect place (must click the same button again).

      JDK9 b135, Ubuntu 16.04 Linux + HiDPI

      Please use the following flag to compile/run:
      --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED

      (the sample was taken from here:
      https://github.com/crispab/crisp-code-examples/blob/master/javafx/usingRobot/src/main/java/se/crisp/example/javafx/robot/RobotTesting.java )

            Assignee:
            Jim Graham
            Reporter:
            Alexander Stepanov (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: