8166382: [hidpi] Ubuntu 16.04: invalid coordinates when using glass robot

Reviewed-by: kcr